fixed all_gens access, devise-notice spacing

--- a/app/assets/stylesheets/text.css.scss
+++ b/app/assets/stylesheets/text.css.scss
@@ -11,6 +11,6 @@
 
 .group-description {
     p {
-        font-size: 130%;
+        font-size: 123%;
     }
 }
